--- a/luci-app-easserver2/luasrc/view/easserver2/global/status.htm
+++ b/luci-app-easserver2/luasrc/view/easserver2/global/status.htm
@@ -109,7 +109,7 @@ https://github.com/pure-css/pure/blob/master/LICENSE.md
 					if (true) {
 						var status_node = document.getElementById('status_node');
 						if (status_node) {
-							var text = 'EAS Server软路由系统状态<br />';
+							var text = 'EAS Server系统状态<br />';
 							if (data["global_status"])
 								text += '<span class="green"><%:RUNNING%></span>';
 							else
